Step 3 - Create form for editing Field Type

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,3 +39,4 @@ services:
     App\FieldType\Point2D\Type:
         tags:
             - { name: ezplatform.field_type, alias: point2d }
+            - { name: ezplatform.field_type.form_mapper.value, fieldType: point2d }
