--- a/config/packages/ezplatform.yaml
+++ b/config/packages/ezplatform.yaml
@@ -75,6 +75,8 @@ ezplatform:
                 # varnish_invalidate_token: '%varnish_invalidate_token%' # @todo enable ezplatform-http-cache first
             field_templates:
                 - { template: 'point2d_field.html.twig', priority: 0 }
+            fielddefinition_edit_templates:
+                - { template: 'point2d_field_type_definition.html.twig', priority: 0 }
 
         site:
             languages: [eng-GB]
