--- a/config/services.yaml
+++ b/config/services.yaml
@@ -40,3 +40,4 @@ services:
         tags:
             - { name: ezplatform.field_type, alias: point2d }
             - { name: ezplatform.field_type.form_mapper.value, fieldType: point2d }
+            - { name: ezplatform.field_type.form_mapper.definition, fieldType: point2d }
