--- a/config/services.yaml
+++ b/config/services.yaml
@@ -41,3 +41,11 @@ services:
             - { name: ezplatform.field_type, alias: point2d }
             - { name: ezplatform.field_type.form_mapper.value, fieldType: point2d }
             - { name: ezplatform.field_type.form_mapper.definition, fieldType: point2d }
+
+    App\Serializer\Point2D\ValueNormalizer:
+        tags:
+            - { name: serializer.normalizer }
+
+    App\Serializer\Point2D\ValueDenormalizer:
+        tags:
+            - { name: serializer.denormalizer }
